migrations to new jdk, gradle and jakarta