@@ -1,21 +1,21 @@
 package spark.embeddedserver.jetty.websocket;
 
+import java.lang.reflect.InvocationTargetException;
+
 import static java.util.Objects.requireNonNull;
 
-public class WebSocketHandlerClassWrapper implements WebSocketHandlerWrapper {
-    
-    private final Class<?> handlerClass;
+public record WebSocketHandlerClassWrapper(Class<?> handlerClass) implements WebSocketHandlerWrapper {
 
-    public WebSocketHandlerClassWrapper(Class<?> handlerClass) {
+    public WebSocketHandlerClassWrapper {
         requireNonNull(handlerClass, "WebSocket handler class cannot be null");
         WebSocketHandlerWrapper.validateHandlerClass(handlerClass);
-        this.handlerClass = handlerClass;
     }
+
     @Override
     public Object getHandler() {
         try {
-            return handlerClass.newInstance();
-        } catch (InstantiationException | IllegalAccessException ex) {
+            return handlerClass.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException ex) {
             throw new RuntimeException("Could not instantiate websocket handler", ex);
         }
     }
